syntax="proto3";
package auth_subscription;
option go_package="./pkg/pb/auth_subscription";
import "google/protobuf/timestamp.proto";
service AuthSubscriptionService{
    rpc AdminLogin(AdminLoginRequest) returns (AdminLoginResponse);
    rpc BlockUser(BlockUserRequest) returns (BlockUserResponse);
    rpc UnblockUser(UnblockUserRequest) returns (UnblockUserResponse);
    rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
    rpc CreateSubscriptionPlan(CreateSubscriptionPlanRequest) returns (CreateSubscriptionPlanResponse);
    rpc UpdateSubscriptionPlan(UpdateSubscriptionPlanRequest) returns (UpdateSubscriptionPlanResponse);
    rpc ActivateSubscriptionPlan(ActivateSubscriptionPlanRequest) returns (ActivateSubscriptionPlanResponse);
    rpc DeactivateSubscriptionPlan(DeactivateSubscriptionPlanRequest) returns (DeactivateSubscriptionPlanResponse);
    rpc GetAllSubscriptionPlans(GetAllSubscriptionPlansRequest) returns (GetAllSubscriptionPlansResponse);

    rpc UserSignUp(UserSignUpRequest) returns (UserSignUpResponse);
    rpc VerifyOtp(OtpRequest) returns (OtpVerificationResponse);
    rpc ResendOtp(ResendOtpRequest) returns (ResendOtpResponse);
    rpc AccessRegenerator(AccessRegeneratorRequest) returns (AccessRegeneratorResponse);
    rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
    rpc UserLogin(UserLoginRequest) returns (UserLoginResponse);
    rpc GetAllActiveSubscriptionPlans(GetAllActiveSubscriptionPlansRequest) returns (GetAllActiveSubscriptionPlansResponse);
}

message GetAllUsersRequest{
    uint64 limit=1;
    uint64 offset=2;
}

message GetAllUsersResponse{
    repeated User Users=1;
}

message User{
    uint64 Id=1;
    string Name=2;
    string UserName=3;
    string Email=4;
    string Bio=5;
    string ProfileImgUrl=6;
    string Links=7;
    string Status=8;
}

message GetAllActiveSubscriptionPlansRequest{
    uint64 Limit=1;
    uint64 Offset=2;
}

message GetAllActiveSubscriptionPlansResponse{
    repeated SubscriptioPlan SubscriptioPlans=1;
}

message GetAllSubscriptionPlansRequest{
    uint64 Limit=1;
    uint64 Offset=2;
}
message SubscriptioPlan{
    uint64 Id=1;
    google.protobuf.Timestamp CreatedAt=2;
    google.protobuf.Timestamp UpdatedAt=3;
    string Name=4;
    float Price=5;
    uint64 DurationDays=6;
    string Description=7;
    bool IsActive=8;
}
message GetAllSubscriptionPlansResponse{
    repeated SubscriptioPlan SubscriptioPlans=1;
}

message DeactivateSubscriptionPlanRequest{
    uint64 Id=1;
}

message DeactivateSubscriptionPlanResponse{
    uint64 Id=1;
    google.protobuf.Timestamp CreatedAt=2;
    google.protobuf.Timestamp UpdatedAt=3;
    string Name=4;
    float Price=5;
    uint64 DurationDays=6;
    string Description=7;
    bool IsActive=8;
}

message ActivateSubscriptionPlanRequest{
    uint64 Id=1;
}
message ActivateSubscriptionPlanResponse{
    uint64 Id=1;
    google.protobuf.Timestamp CreatedAt=2;
    google.protobuf.Timestamp UpdatedAt=3;
    string Name=4;
    float Price=5;
    uint64 DurationDays=6;
    string Description=7;
    bool IsActive=8;
}
message UpdateSubscriptionPlanRequest{
    uint64 Id=1;
    string Name=2;
    float Price=3;
    uint64 DurationDays=4;
    string Description=5;
}

message UpdateSubscriptionPlanResponse{
    uint64 Id=1;
    google.protobuf.Timestamp CreatedAt=2;
    google.protobuf.Timestamp UpdatedAt=3;
    string Name=4;
    float Price=5;
    uint64 DurationDays=6;
    string Description=7;
    bool IsActive=8;
}

message CreateSubscriptionPlanRequest{
    string Name=1;
    int64 Price=2;
    string Currency=3;
    string Period=4;
    uint64 Interval=5;
    string Description=6;
}

message CreateSubscriptionPlanResponse{
    uint64 Id=1;
    google.protobuf.Timestamp CreatedAt = 2;
    google.protobuf.Timestamp UpdatedAt = 3;
    string Name=4;
    int64 Price=5;
    string Currency=6;
    string Period=7;
    uint64 Interval=8;
    string Description=9;
    bool IsActive=10;
}


message AdminLoginRequest{
    string email=1;
    string password=2;
}
message AdminLoginResponse{
    AdminDetails adminDetails=1;
    string AccessToken=2;
    string RefreshToken=3;
}
message AdminDetails{
    uint64 id=1;
    string email=2;
}

message UserLoginRequest{
    string email=1;
    string password=2;
}

message UserLoginResponse{
    UserDetails userDetails=1;
    string AccessToken=2;
    string RefreshToken=3;
}

message UserDetails{
    uint64 id=1;
    string Name=2;
    string UserName=3;
    string Email=4;
    string Status=5;
    bool BlueTick=6;
}
message BlockUserRequest{
    uint64 UserId=1;
}

message BlockUserResponse{
    uint64 UserId=1;
}

message UnblockUserRequest{
    uint64 UserId=1;
}

message UnblockUserResponse{
    uint64 UserId=1;
}



message UserSignUpRequest{
    string UserName  =1;
    string Name = 2;
    string Email =3;
    string Password = 4;
    string ConfirmPassword = 5;
}

message UserSignUpResponse{
    uint64 id=1;
	string UserName  =2;
    string Name = 3;
    string Email =4;
    string OtpVerificationToken=5;
}

message OtpRequest{
    uint64 UserId=1;
    uint64 OtpCode=2;
    string Email=3;
    string Purpose=4;
}

message OtpVerificationResponse{
    string Email=1;
    string Status=2;
    string AccessToken=3;
    string RefreshToken=4;
    string TempToken=5;
}

message ResendOtpRequest{
    string Name=1;
    string Email=2;
}

message ResendOtpResponse{
    string Email=1;
}

message AccessRegeneratorRequest{
    uint64 id=1;
    string Email=2;
    string Role=3;
}

message AccessRegeneratorResponse{
    uint64 id=1;
    string Email=2;
    string Role=3;
    string NewAccessToken=4;
}

message ResetPasswordRequest{
    string Email=1;
    string Password=2;
}

message ResetPasswordResponse{
    string Email=1;
}
// message RequestUserId{
//     string UserId=1;
// }
// message ResponseErrorMessage{
//     string ErrorMessage=1;
// }

// message RequestSetProfileImg{
//     string UserId=1;
//     string ContentType=2;
//      bytes Img=3;
// }

// message RequestUserSearch{
//     string UserId=1;
//     string SearchText=2;
//     string limit=3;
//     string offset=4;
// }

// message ResponseUserSearch{
//     string ErrorMessage=1;
//     repeated SingleResponseGetFollowers SearchResult=2;
// }

// message SingleResponseGetFollowers{
//     uint64 UserId=4;
//     string Name=1;
//     string UserName=2;
//     string ProfileImageURL=3;
// }
// message ResponseGetUsersDetails{
// string ErrorMessage=1;
// repeated SingleResponseGetFollowers UserData=2;
// }


// message RequestEditUserProfile{
// string Name=1;
// string UserName=2;
// string Bio=3;
// string Links=4;
// string UserId=5;
// }


// message RequestGetUserProfile{
//     string UserId=1;
//     string UserBId=2;
// }

// message ResponseUserProfile{
// string Name=1;
// string UserName=2;
// string Bio=3;
// string Links=4;
// string ProfileImageURL=5;
// uint64 PostsCount=6;
// uint64 FollowerCount=7;
// uint64 FollowingCount=8;
// bool FollowingStat=10;
// string ErrorMessage=9;
// }

// message RequestAccessGenerator{
//     string AccessToken=1;
//     string RefreshToken=2;
// }
// message ResponseAccessGenerator{
//     string AccesToken=1;
//     string ErrorMessage=2;
// }

// message RequestVerifyAccess{
//    string AccessToken=1;
// }
// message ResponseVerifyAccess{
//     string UserId=2;
//     string ErrorMessage=1;
// }

// message RequestResetPass{
// string Otp=1;
// string Password=2;
// string ConfirmPassword=3;
// string TempToken=4;
// }


// message RequestForgotPass{
//     string Email=1;
// }
// message ResponseForgotPass{
//     string Token=1;
//     string ErrorMessage=2;
// }


// message RequestUserLogin{
//     string Email=1;
//     string Password=2;
// }
// message ResponseUserLogin{
//     string AccessToken=1;
//     string RefreshToken=2;
//     string ErrorMessage=3;
// }


// message RequestOtpVefification{
//     string TempToken=1;
//     string Otp=2;

// }
// message ResponseOtpVerification{
//     string AccessToken=1;
//     string RefreshToken=2;
//     string ErrorMessage =3;
//     string Otp=4;
// }



